# esel

./: CMakeLists.txt  README.md
src/: main.c
src/input/: input.c  input.h  keys.c  keys.h  mouse.h
src/widgets/: textarea.c  textarea.h
